Changelog
=========

2.1.11 (unreleased)
-------------------


2.1.10 (2012-12-09)
-------------------

- change string ownership to creators as it makes more sense
  refs https://dev.plone.org/ticket/8725
  [maartenkling]

- Make sure ATTopic.queryCatalog cannot be published. This fixes
  https://plone.org/products/plone/security/advisories/20121106/14
  [davisagli]


2.1.9 (2012-10-11)
------------------

- Silence false security warning during startup complaining about
  `ATTopic.setText`.
  [hannosch]

- Notify modified when an image is transformed
  through transform image tab.
  This updates modification date and refresh Etag.
  Refs https://dev.plone.org/ticket/13169.
  [thomasdesvenain]

- add @@download view for IFileContent
  [vangheem]

- Implement ISyndicatable for folder and topic in 4.3
  [vangheem]


2.1.8 (2012-08-18)
------------------

- Fixes album view - when scales generation failed,
  file name appeared twice.
  Refs https://dev.plone.org/ticket/13082.
  [thomasdesvenain]

- PEP 8 (ignoring W602, E301, E501 and E701).
  [hvelarde]

- Deprecated aliases were replaced on tests.
  [hvelarde]

- iCal export: Don't escape COLON character in TEXT property.
  Fixes http://dev.plone.org/ticket/11540.
  [patch by jenskl, applied by kleist]

- Changed deprecated getSiteEncoding to hardcoded `utf-8`
  [tom_gross]

2.1.7 (2012-04-09)
------------------

- Restored icon display in topic tabular view
  [tom_gross]


2.1.6 (2012-01-26)
------------------

- Fix the change/modify permission used for changing or managing
  Topic/Collection criteria.
  [rossp]

- Calculate the localized datetime string based on UTC time. Refs
  https://dev.plone.org/ticket/12197.
  [malthe, ajung]

- Replace getParentNode() with __parent__ / aq_parent as appropriate.
  [elro]

2.1.5 (2011-10-06)
------------------

- Enable sorting by the getObjPositionInParent index.
  [davisagli]


2.1.4 (2011-08-31)
------------------

- Avoid critical error if for any reason,